--- a/index.html
+++ b/index.html
@@ -17,16 +17,37 @@
         <section class="Poem"> 
             <div class="container">
                 <h2 class="First verse"></h2>
+                <p>Krocz spokojnie wśród zgiełku i pośpiechu, pamiętaj jaki spokój może być w ciszy.
+                <br>Tak dalece jak to możliwe, nie wyrzekając się siebie, bądź w dobrych stosunkach z innymi ludźmi.
+                <br>Prawdę swą głoś spokojnie i jasno, słuchając też tego, co mówią inni: nawet głupcy i ignoranci, oni też mają swą opowieść.
+                <br>Jeżeli porównujesz się z innymi możesz stać się próżny lub zgorzkniały, albowiem zawsze będą lepsi i gorsi od ciebie.</p>
             </div>
             <div class="container">
                 <h2 class="Second verse"></h2>
+                <p>Ciesz się zarówno swymi osiągnięciami jak i planami.
+                <br>Wykonuj z sercem swą pracę, jakkolwiek by była skromna. Jest ona trwałą wartością w zmiennych kolejach losu.
+                <br>Zachowaj ostrożność w swych przedsięwzięciach – świat bowiem pełen jest oszustwa. 
+                <br>Lecz niech ci to nie przesłania prawdziwej cnoty; wielu ludzi dąży do wzniosłych ideałów i wszędzie życie jest pełne heroizmu.</p>
             </div>
             <div class="container">
                 <h2 class="Third verse"></h2>
+                <p>Bądź sobą, a zwłaszcza nie zwalczaj uczuć.
+                <br>Nie bądź cyniczny wobec miłości, albowiem w obliczu wszelkiej oschłości i rozczarowań jest ona wieczna jak trawa.
+                <br>Przyjmuj pogodnie to, co lata niosą, bez goryczy wyrzekając się przymiotów młodości.
+                <br>Rozwijaj siłę ducha, by w nagłym nieszczęściu mogła być tarczą dla ciebie. Lecz nie dręcz się tworami wyobraźni. 
+                <br>Wiele obaw rodzi się ze znużenia i samotności.
+                <br>Obok zdrowej dyscypliny bądź łagodny dla siebie.</br>
             <div class="container">
                 <h2 class="Fourth verse"></h2>
+                <p>Jesteś dzieckiem wszechświata: nie mniej niż gwiazdy i drzewa masz prawo być tutaj i czy to jest dla ciebie jasne czy nie, 
+                <br>nie wątp, że wszechświat jest taki jaki być powinien.
+                <br>Tak więc bądź w pokoju z Bogiem, cokolwiek myślisz o Jego istnieniu i czymkolwiek się zajmujesz i jakiekolwiek są twe pragnienia; 
+                <br>w zgiełku ulicznym, zamęcie życia, zachowaj pokój ze swą duszą.
+                <br>Z całym swym zakłamaniem, znojem i rozwianymi marzeniami ciągle jeszcze ten świat jest piękny.
+                <br>Bądź uważny, staraj się być szczęśliwy.</p>
             </div>
         </section>
+
         <footer class="page-footer">
             <div class="container">
                 <p></p>
