Add html for footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
         <footer class="page-footer">
             <div class="container">
-                <p></p>
+                <p>Anonimowy tekst z 1692 r.
+                <br>znaleziony w starym kościele św. Pawła w Baltimore</p>
             </div>
         </footer>
     </body>
