Update content of index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <br>Tak więc bądź w pokoju z Bogiem, cokolwiek myślisz o Jego istnieniu i czymkolwiek się zajmujesz i jakiekolwiek są twe pragnienia; 
                 <br>w zgiełku ulicznym, zamęcie życia, zachowaj pokój ze swą duszą.
                 <br>Z całym swym zakłamaniem, znojem i rozwianymi marzeniami ciągle jeszcze ten świat jest piękny.
-                <br>Bądź uważny, staraj się być szczęśliwy.</p>
+                <br>Bądź uważny, staraj się być szczęśliwy...</p>
             </div>
         </section>
 
